<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".view.GeneralConfig">


    <Button
            android:text="@string/init_process"
            android:layout_width="159dp"
            android:layout_height="43dp"
            android:id="@+id/btn_generalconfig" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_end_time" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="0.804" android:background="@color/colorPrimary"/>
    <Button
            android:text="@string/exit"
            android:layout_width="wrap_content"
            android:layout_height="43dp"
            android:id="@+id/btn_exit" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_init_time" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.04"
            app:layout_constraintVertical_bias="0.804" android:background="@android:color/holo_red_dark"
    />
    <TextView
            android:text="@string/lbl_title_general"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lbl_title_general" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="28dp" app:layout_constraintTop_toTopOf="parent"/>
    <CalendarView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/calendarView2" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/lbl_title_calendar"/>
    <EditText
            android:layout_width="345dp"
            android:layout_height="41dp"
            android:inputType="textPostalAddress"
            android:ems="10"
            android:id="@+id/txt_address" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.54" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/lbl_address" android:hint="@string/lbl_address"/>
    <TextView
            android:text="@string/lbl_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lbl_address" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.074" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/calendarView2"/>
    <TextView
            android:text="@string/lbl_title_calendar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lbl_title_calendar" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.068" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/lbl_title_general"/>
    <EditText
            android:layout_width="151dp"
            android:layout_height="48dp"
            android:inputType="time"
            android:ems="10"
            android:id="@+id/txt_end_time" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/lbl_execute_time" android:hint="@string/txt_end_time"/>
    <EditText
            android:layout_width="151dp"
            android:layout_height="48dp"
            android:inputType="time"
            android:ems="10"
            android:id="@+id/txt_init_time"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toStartOf="@+id/txt_end_time" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.353" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/lbl_execute_time" android:hint="@string/txt_init_time"/>
    <TextView
            android:text="@string/lbl_execute_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lbl_execute_time" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.08" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_address"/>
</android.support.constraint.ConstraintLayout>