<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.Municipalities">
    <ImageView
            android:layout_width="177dp"
            android:layout_height="114dp"
            android:id="@+id/imageView2" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView"
            android:focusableInTouchMode="true" android:contentDescription="@string/app_name"
            android:scaleType="centerInside"
            android:src="@drawable/ic_launcher_background"/>

    <AutoCompleteTextView
            android:id="@+id/auto_complete_departamento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp" app:layout_constraintTop_toBottomOf="@+id/imageView2"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
            app:layout_constraintHorizontal_bias="0.0" android:hint="@string/txt_department"/>
    <AutoCompleteTextView
            android:id="@+id/txt_municipality"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/auto_complete_departamento"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
            app:layout_constraintHorizontal_bias="0.0" android:hint="@string/txt_municipality"/>
    <Button
            android:text="@string/init_process"
            android:layout_width="159dp"
            android:layout_height="43dp"
            android:id="@+id/buttonMain" android:layout_marginTop="76dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_municipality" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="0.05" android:background="@color/colorPrimary"/>
    <Button
            android:text="@string/exit"
            android:layout_width="wrap_content"
            android:layout_height="43dp"
            android:id="@+id/buttonMain2" android:layout_marginTop="76dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_municipality" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.05" android:background="@android:color/holo_red_dark"
    />
    <TextView
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" android:layout_marginTop="36dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.502"/>
</android.support.constraint.ConstraintLayout>