<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             tools:context=".view.Start">


    <Button
            android:text="@string/init_process"
            android:layout_width="159dp"
            android:layout_height="43dp"
            android:id="@+id/btn_generalconfig2" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/progressBar" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" android:layout_marginBottom="200dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.833"
            app:layout_constraintVertical_bias="0.804" android:background="@color/colorPrimary"/>
    <Button
            android:text="@string/exit"
            android:layout_width="wrap_content"
            android:layout_height="43dp"
            android:id="@+id/btn_exit2" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/progressBar"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" android:layout_marginBottom="200dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.804" android:background="@android:color/holo_red_dark"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/btn_generalconfig2"/>
    <TextView
            android:text="@string/lbl_title_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lbl_title_general" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="144dp" app:layout_constraintTop_toTopOf="parent" android:textSize="30sp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="time"
            android:ems="10"
            android:id="@+id/editText" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/lbl_title_general" app:layout_constraintHorizontal_bias="0.489"/>
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="209dp"
            android:layout_height="184dp"
            android:id="@+id/progressBar"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/editText"
            app:layout_constraintHorizontal_bias="0.478" android:layout_marginTop="16dp"/>
</android.support.constraint.ConstraintLayout>