<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             tools:context=".view.Aforo">

    <Button
            android:text="@string/init_process"
            android:layout_width="159dp"
            android:layout_height="43dp"
            android:id="@+id/btn_generalconfig3" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" android:layout_marginBottom="36dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="0.804" android:background="@color/colorPrimary"/>
    <Button
            android:text="@string/exit"
            android:layout_width="wrap_content"
            android:layout_height="43dp"
            android:id="@+id/btn_exit3" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="72dp" android:layout_marginBottom="36dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.804" android:background="@android:color/holo_red_dark"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/btn_generalconfig2"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/txt_plaque"
            android:ems="10"
            android:id="@+id/editText5" android:layout_marginStart="60dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/lbl_title_aforo" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/imageView"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:ems="10"
            tools:layout_editor_absoluteY="171dp" android:id="@+id/editText6"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="60dp"
            app:layout_constraintEnd_toStartOf="@+id/imageButton" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.487" android:text="@string/txt_number"/>
    <TextView
            android:text="@string/lbl_title_aforo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lbl_title_aforo" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/seekBar"/>
    <SeekBar
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="352dp"
            android:layout_height="14dp"
            android:max="10"
            android:progress="3"
            android:id="@+id/seekBar" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"/>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            app:layout_constraintTop_toBottomOf="@+id/editText6" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:id="@+id/linearLayout2" app:layout_constraintHorizontal_bias="1.0">
        <Spinner
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:id="@+id/spinner7" android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"/>
        <Spinner
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:id="@+id/spinner3"
                android:layout_marginEnd="8dp"/>
        <Spinner
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:id="@+id/spinner4"
                android:layout_marginEnd="8dp"/>
        <Spinner
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:id="@+id/spinner6"
                android:layout_marginEnd="8dp"/>
        <Spinner
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:id="@+id/spinner5"
                android:layout_marginEnd="8dp"/>
        <Spinner
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:id="@+id/spinner8" android:layout_marginEnd="8dp"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:gravity="center|center_horizontal|center_vertical"
            android:clickable="false" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:id="@+id/linearLayout" android:layout_marginTop="44dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" app:layout_constraintHorizontal_bias="0.498">
        <TextView
                android:text="@string/lbl_types"
                android:layout_height="40dp" android:id="@+id/lbl_types"
                android:layout_width="match_parent" android:textAlignment="center" android:gravity="center"/>
        <NumberPicker
                android:focusable="false"
                android:focusedByDefault="false"
                android:id="@+id/txt_percentage_coverage" android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent" android:hint="@string/lbl_types"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/lbl_types"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true" android:focusableInTouchMode="false"


                android:clickable="false"/>
    </LinearLayout>

    <ImageButton
            android:src="@android:drawable/ic_menu_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" tools:layout_editor_absoluteY="171dp"
            android:id="@+id/imageButton" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="36dp"/>
    <ImageView
            android:src="@android:drawable/ic_btn_speak_now"
            android:layout_width="48dp"
            android:layout_height="45dp" tools:layout_editor_absoluteY="85dp"
            android:id="@+id/imageView" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="44dp"/>
</android.support.constraint.ConstraintLayout>